# dog-breed-aesthetics-mcp

./: README.md  create_structure.sh  pyproject.toml  verify_structure.sh
dog_breed_aesthetics_mcp/: __init__.py  __main__.py  breed_data.py  server.py
tests/: run_tests.sh  test_breed_data.py  test_server_tools.py
