[project]
name = "dog-breed-aesthetics-mcp"
version = "0.1.0"
description = "MCP server for translating dog breed characteristics into visual aesthetic parameters"
authors = [
    {name = "Dal Marsters"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "fastmcp",
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dog-breed-aesthetics-mcp = "dog_breed_aesthetics_mcp.server:main"
